[DT-2028] Address TODO in DacAutomationRuleResource. (#2631)